# gefion

./: .env.example  .env.prod  .gitignore  AI_INSTRUCTIONS.md  BUGFIX_FEATURES_COMPUTE.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  HIGHLEVEL.md  LICENSE  Makefile  NEXT_STEPS.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_QUICK_REF.md  PROGRESS.md  README.md  TROUBLESHOOTING.md  check_latest_dates.py  cli_helpers.py  docker-compose.yml  pyproject.toml
.claude/: settings.json
data/: registry.yaml
data-quality/: catalog.yaml
docker/: Dockerfile.ml
docs/: ARCHITECTURE.md  BACKTESTING.md  DATABASE_MIGRATIONS.md  DATA_DICTIONARY.md  DEPLOYMENT.md  DERIVATIVE_FEATURES_QUICK_START.md  DEVELOPMENT.md  DISPATCHER_IMPLEMENTATION_SUMMARY.md  E2E_TEST_GUIDE.md  FEATURE_DISPATCHER.md  FINAL_SUMMARY.md  FUNCTIONS_AS_DATA.md  FUTURE_DIRECTIONS.md  GOLDEN_PATH.md  HIGHLEVEL.md  MCP_PRODUCTION.md  MCP_WORKFLOWS.md  ML_QUICKSTART.md  ML_ROADMAP.md  ML_SYSTEM_DESIGN.md  OBSERVABILITY.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_QUICK_REF.md  PERFORMANCE_README.md  PERFORMANCE_SUMMARY.md  PERFORMANCE_WORKFLOW.md  README.md  REGIMES.md  SECURITY_SANDBOXING.md  STRATEGIES.md  TEMPO_QUICKSTART.md  TEST_MIGRATION_NOTES.md  TROUBLESHOOTING.md  USER_GUIDE.md  WHITEPAPER_TECHNICAL_ANALYSIS_AND_ML.md  dev-journal.md  optimizations_summary.md  (+1 more)
examples/: derivative_features_example.py  momentum_backtest.py
feature-definitions/: daily_market_cap.json  daily_pe_ratio.json  error_test_feature.json  fundamental_eps.json  indicator_adx_14.json  indicator_bb_lower.json  indicator_bb_middle.json  indicator_bb_upper.json  indicator_ema_12.json  indicator_ema_26.json  indicator_macd.json  indicator_macd_hist.json  indicator_macd_signal.json  indicator_psar.json  indicator_rsi_14.json  indicator_rsi_30.json  indicator_sma_20.json  indicator_sma_200.json  indicator_sma_50.json  indicator_stoch_d.json  indicator_stoch_k.json  macro_vix.json  realized_vol_20.json
feature-functions/: forward_fill_quarterly.json  indicator_adx.json  indicator_adx_v2.0.json  indicator_bb.json  indicator_bb_v2.0.json  indicator_ema.json  indicator_ema_v2.0.json  indicator_macd.json  indicator_macd_v2.0.json  indicator_psar.json  indicator_psar_v2.0.json  indicator_rsi.json  indicator_rsi_v2.0.json  indicator_sma.json  indicator_sma_v2.0.json  indicator_stoch.json  indicator_stoch_v2.0.json  price_change_pct_v1.0.json  realized_vol.json
features/: feature_definitions.json  feature_functions.json
mcp-server/: .env.example  Dockerfile  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  requirements.txt  server.py  test_dev_status.py  test_health_integration.py  test_rbac.py  test_system_status.py
scripts/: analyze_trace.py  check_dev_services.sh  check_observability.py  check_traces.sh  extend_hypertable_chunks.py  fix_hypertable.py  gen_data_dictionary.py  migrate-g2-to-gefion.sh  otel_smoke_test.sh  perf_report.py  perf_watchdog.sh  populate_indicator_features.sql  register_derivatives.sh  save_trace_baseline.sh  tdd_enforce.py
sql/: README.md  derivative_features.sql  enable_compression.sql  schema.sql
tests/: conftest.py  discovery_synth.py  test_adaptive.py  test_alphavantage_catalog.py  test_alphavantage_quarterly.py  test_auto_indicator_workers.py  test_backtest_cli.py  test_backtest_compare_cli.py  test_backtest_costs.py  test_backtest_engine.py  test_backtest_long_only_regression.py  test_backtest_metrics_extended.py  test_backtest_optimization.py  test_backtest_risk.py  test_backtest_short_costs.py  test_backtest_short_metrics.py  test_backtest_short_positions.py  test_backtest_short_risk.py  test_backtest_sizing.py  test_backtest_slippage.py  test_backtest_zero_price.py  test_backup_retention.py  test_bare_db_spans.py  (+305 more)
(+499 files in other folders)
