[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gefion"
version = "0.1.0"
description = "Quantitative trading analysis and ML pipeline — named after the Norse goddess Gefion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "rich>=14.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "numpy>=1.24",
    "TA-Lib>=0.4",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "opentelemetry-instrumentation-psycopg>=0.41b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
ml_extended = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "pyarrow>=14.0",
    "shap>=0.44",
    "optuna>=3.5",
]
charts = [
    "plotly>=5.18",
]
ui = [
    "streamlit>=1.29",
    "plotly>=5.18",
    "anthropic>=0.18",
]
gpu = [
    "torch>=2.0",
]
all = [
    "gefion[dev,ml_extended,charts,ui,gpu]",
]

[project.scripts]
gefion = "gefion.cli:entrypoint"
gf = "gefion.cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
