[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gefion"
dynamic = ["version"]
description = "Quantitative trading analysis and ML pipeline — named after the Norse goddess Gefion"
readme = "README.md"
license = {text = "Elastic-2.0"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "rich>=14.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "numpy>=1.24",
    "TA-Lib>=0.4",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "opentelemetry-instrumentation-psycopg>=0.41b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "playwright>=1.40",
    "pytest-playwright>=0.4",
]
ml_extended = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "pyarrow>=14.0",
    "shap>=0.44",
    "optuna>=3.5",
]
charts = [
    "plotly>=5.18",
]
ui = [
    "streamlit>=1.57",
    "plotly>=5.18",
    "anthropic>=0.18",
]
gpu = [
    "torch>=2.0",
]
all = [
    "gefion[dev,ml_extended,charts,ui,gpu]",
]

[project.scripts]
gefion = "gefion.cli:entrypoint"
gf = "gefion.cli:entrypoint"

# Version is derived from git tags (vX.Y.Z). fallback_version keeps
# tag-less environments (shallow CI checkouts, tarballs) installable.
[tool.setuptools_scm]
fallback_version = "0.0.0"

# Release automation (issue #30): tag-only flow — python-semantic-release
# computes the next version from Conventional Commits since the last tag,
# then pushes a tag + GitHub Release. It never commits back to main
# (branch protection would reject it); see .github/workflows/release.yml.
[tool.semantic_release]
tag_format = "v{version}"
commit_parser = "conventional"
# While on 0.x: breaking changes bump minor, not to 1.0 — going 1.0 is a
# deliberate decision.
major_on_zero = false
allow_zero_version = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not ui'"
markers = [
    "ui: smoke tests that drive the Streamlit UI via Playwright (opt-in: pytest -m ui)",
]
